--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,9 +39,9 @@ body {
 }
 
 nav#navBar{
-    background: linear-gradient(to bottom,
-        rgba(235, 237, 249, 0.80) 0%,
-        rgba(255, 255, 255, 0.80) 100%);
+    background: linear-gradient(90deg,
+        rgba(235, 237, 249, 0.80) 50%,
+        rgba(255, 255, 255, 0.80) 50%);
     box-shadow: 0px 0px 4px 2px $gray1;
     padding: 10px 0;
     transition: all 0.5s ease-in;    
@@ -50,14 +50,35 @@ nav#navBar{
         background-color: white;
         padding-left: 15px;
         padding-right: 15px;
+        button{
+            i.fa{
+                color: $gray1;
+                padding: 10px;
+                border: 1px solid $gray1;
+            }
+            &:hover,
+            &:focus,
+            &:active{
+                outline: none;
+                i.fa{
+                    outline: none;
+                    color: $gray2;
+                    background-color: $gray1;
+                    border: 1px solid white;
+                }
+            }
+        }
     }
     a{
         color:$gray1;
         padding: 5px 5px;
-        margin: 0 10px
+        margin: 0 10px;
+        @media(min-width: 992px) and (max-width:1200px){
+            margin: 0 4px;
+        }
     }
     a.navbar-brand{
-        font-size: 30px;
+        font-size: 28px;
         font-weight: bold;
         margin: 0;
         &:hover,
@@ -95,16 +116,17 @@ nav#navBar{
     background-image: url(../images/bg.jpg);
     background-position: center center;
     background-size: cover;
-    min-height: 100vh;
+    min-height: 100%;
     .overlay{
         background:rgba(13, 15, 19, 0.4);
         padding-top: 180px;
-        min-height: 100vh;
+        min-height: 100%;
         .header{
             .col-md-6{
                 padding-left: 0;
                 padding-right: 0;
                 .personal-info{
+                    height: auto;    ;
                     background-color: white;
                     height: 100%;
                     padding: 80px;
@@ -135,16 +157,16 @@ nav#navBar{
                 }
                 .photo{
                     background-color: white;
-                    height: 100%;
+                    height: 530px;
                     img{
                         width: 100%;
-                        height: 100%;
                     }
                 }
             }    
         }
         .social{
             position: relative;
+            z-index: 10;
         }
         .social-icons{
             position: absolute;
@@ -178,6 +200,7 @@ nav#navBar{
     padding-top: 180px;
     padding-bottom: 120px;
     background-color: $gray2;
+    position: relative;
     .title{
         h1{
             font-size: 32px;
@@ -257,10 +280,9 @@ nav#navBar{
                 border-radius: 50%;
             }
             @media(max-width: 576px){
-                text-align: left;
-                padding-left: 25px;
+                text-align: center;
                 &:before{
-                    left: 5px;
+                    display: none;
                 }
             }
         }
@@ -309,7 +331,7 @@ nav#navBar{
             width: 3px;
             height: 400%;
             top: 175px;
-            background-color: $gray2;
+            background-color: $gray1;            
             @media(max-width: 1200px)and(min-width: 992px){
                 height: 460%;
             }
@@ -347,10 +369,10 @@ nav#navBar{
                 border-radius: 50%;
             }
             @media(max-width: 576px){
-                text-align: left;
+                text-align: center;
                 padding-left: 25px;
                 &:before{
-                    left: 5px;
+                    display: none;
                 }
             }
         }
@@ -368,6 +390,203 @@ nav#navBar{
             }
             @media(max-width: 576px){
                 margin-top: 20px;
+            }
+        }
+    }
+}
+
+#certificates{
+    background: radial-gradient($gray2, $gray1);
+    padding-top: 40px;
+    padding-bottom: 100px;
+    .title{
+        h2{
+            padding-top: 40px;
+            padding-bottom: 40px;
+            color: $gray1;
+            position: relative;
+            &:before{
+                width:100px;
+                height: 3px;
+                top: 100px;
+                background-color: $gray1;
+                content: "";
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);         
+            }
+        }
+    }
+    .carousel-inner{
+        margin-top: 40px;
+    }
+    .carousel-item{
+        h1{
+            font-size: 32px;
+            line-height: 45px;
+            font-weight: bold;
+            margin-bottom: 30px; 
+        }
+        h3{
+            font-size: 28px;
+            line-height: 38px;
+            margin-bottom: 20px; 
+        }
+        h5{
+            font-size: 22px;
+            line-height: 32px;
+            margin-bottom: 20px; 
+        }
+        p{
+            font-size: 16px;
+            line-height: 25px;
+            font-weight: bold;
+        }
+    }
+    #carouselExampleIndicators{
+        ol{
+            bottom: -35px;
+            li{
+                height: 10px;
+                width: 10px;
+                margin-left: 5px;
+                margin-right: 5px;
+                &:hover,
+                &:active,
+                &:focus{
+                    background-color: $gray1;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+}
+
+#projects{
+    background: radial-gradient($gray1, $gray2 30%);
+    padding-top: 40px;
+    padding-bottom: 60px;
+    .title{
+        h2{
+            padding-top: 40px;
+            padding-bottom: 40px;
+            color: $gray1;
+            position: relative;
+            &:before{
+                width:100px;
+                height: 3px;
+                top: 100px;
+                background-color: $gray1;
+                content: "";
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);         
+            }
+        }
+    }
+    .gallery{
+        margin-top: 40px;
+        input{
+            display: none;
+        }
+        input.item-type-1:checked ~ label.label-type-1,
+        input.item-type-2:checked ~ label.label-type-2,
+        input.item-type-3:checked ~ label.label-type-3,
+        input.item-type-all:checked ~ label.label-type-all{
+            color: white;
+            background-color: $brand-primary1;
+            box-shadow: 0 0 2px 2px $brand-primary1;
+        }
+
+        input.item-type-1:checked ~ .items .item.item-type-1,
+        input.item-type-2:checked ~ .items .item.item-type-2,
+        input.item-type-3:checked ~ .items .item.item-type-3,{
+            transform: scale(1.08);
+        }
+
+        input.item-type-1:checked ~ .items .item:not(.item-type-1),
+        input.item-type-2:checked ~ .items .item:not(.item-type-2),
+        input.item-type-3:checked ~ .items .item:not(.item-type-3){
+            transform: scale(0.7);
+            opacity: .6;
+        }
+        .items .item{
+            margin-top: 25px;
+            transition: all .5s ease;
+            .project{
+                position: relative;
+            }
+            .project-overlay{
+                position: absolute;
+                background: rgba(24, 33, 83, .8);
+                height: 100%;
+                width: 100%;
+                top: 0;
+                color: white;
+                display: none;
+            }
+            @media(max-width:575px){
+                img{
+                    width: 90%;
+                }
+            }
+            .category{
+                background: rgba($color:#182153, $alpha: .4);
+                left: 0px;
+                top: 20px;
+                padding: 10px;
+                border-bottom-right-radius: 10px;
+                border-top-right-radius: 10px;
+                position: absolute;
+                font-weight: bold;
+                font-size: 15px;
+                box-shadow: 5px 5px 10px 0px #292b2c;
+            }
+        }
+
+        label{
+            padding: 10px 30px;
+            color: $gray1;
+            box-shadow: 0 0 2px 2px $gray1;
+            margin-left: 8px;
+            margin-right: 8px;
+            margin-bottom: 20px;
+            font-size: 18px;
+            line-height: 35px;
+            text-decoration: none;
+            font-family: 'Cairo SemiBold';
+            cursor: pointer;
+            border-radius: 2px;
+            transition: all .5s ease;
+            &:hover,
+            &:focus,
+            &:active{
+                color: white;
+                background-color: $brand-primary1;
+                box-shadow: 0 0 2px 2px $brand-primary1;
+            }
+        }
+    }
+}
+
+#skills{
+    padding-top: 40px;
+    padding-bottom: 60px;
+    .title{
+        h2{
+            padding-top: 40px;
+            padding-bottom: 40px;
+            color: $gray1;
+            position: relative;
+            &:before{
+                width:100px;
+                height: 3px;
+                top: 100px;
+                background-color: $gray1;
+                content: "";
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);         
             }
         }
     }
